<resources>
    <string name="app_name">AWPL APP</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="image">image</string>
    <string name="begin_your_health_journey_with_a_free_consultation">Begin Your Health Journey with a\n <b> Free Consultation!</b></string>
    <string name="next">Next</string>
    <string name="english">English</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="hindi">Hindi</string>
    <string name="uk_flag">uk_flag</string>
    <string name="enter_your_ds_code">Enter your DS Code</string>
    <string name="access_your_health_profile_and_connect_n_with_doctors_log_in_now">Access your health profile and connect\n with doctors – log in now.</string>
    <string name="enter_your_ds_number_ds_code">Enter your DS Number/DS Code</string>
    <string name="password">Password</string>
    <string name="pass">********</string>
    <string name="login">Login</string>
    <string name="onboarding_1">Begin Your Health Journey with a\nFirst Free Consultation!</string>
    <string name="onboarding_2">Bringing Doctors to Your\nDoor – Virtually.</string>
    <string name="onboarding_3">Upload Symptoms for Minor Issues,\nVideo Call for Major Concerns -\nStart Exploring the App Today!</string>
    <string name="login_as_ds_user">Login as DS User</string>
    <string name="chat_with_us">Chat with us!</string>
    <string name="welcome_to_your_ai_health_companion">Welcome to Your AI Health \n Companion!</string>
    <string name="health_insights">
    You\'re about to unlock <b><font color='#356598'>personalized health insights—completely FREE!</font></b>
</string>
    <string name="text3">Simply enter a few basic details and describe your health concerns. Our intelligent AI chatbot will analyze your condition and provide tailored recommendations instantly.</string>
    <string name="smart_fast_reliable">Smart. Fast. Reliable.</string>
    <string name="get_started_text">
    Tap <b><font color='#356598'>"Get Started"</font></b> to begin. By continuing,</string>
    <string name="get_started_text_privacy_policy">
     <font color='#356598'>[Privacy Policy]</font>.
</string>
    <string name="okay_got_it">Okay,got it.</string>
    <string name="basic_information">Basic Information</string>
    <string name="please_enter_the_below_data_to_help_us_n_know_more_about_you">Please enter the below data to help us know more about you</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="enter_your_height">Enter Your Height</string>
    <string name="enter_your_weight">Enter Your Weight (Kg)</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="others">Others</string>
    <string name="enter_age">Enter Age</string>
    <string name="_20">26</string>
    <string name="identify_your_health_concerns">Identify Your Health Concerns</string>
    <string name="simply_provide_details">
    Simply provide the details below, and our \nChatbot will analyze your health condition.
</string>
    <string name="_1_what_symptoms_are_you_facing_please_describe_your_symptoms_in_brief">1. What symptoms are you facing? Please describe your symptoms in brief.</string>
    <string name="describe_your_symptoms">Describe your symptoms</string>
    <string name="que2">2.How long have you been experiencing these symptoms?</string>
    <string name="_3_days">3 Days</string>
    <string name="que3">3.Any knows Diseases / Health Conditions you are facing?</string>
    <string name="que4">4.Any past medical conditions?</string>
    <string name="medical_conditions">Medical Conditions</string>
    <string name="parasitic_dis">Parasitic disease</string>
    <string name="medications">Medications</string>
    <string name="que6">6.Any Past known allergies?</string>
    <string name="que5">5.Any past medications?</string>
    <string name="allergies">Allergies</string>
    <string name="skip_and_proceed_to_homepage">Skip and proceed to homepage</string>
    <string name="thank_you_for_your_input">Thank you for your input</string>
    <string name="you_re_all_set">You\'re All Set!</string>
    <string name="there_s_no_major_health_concern_at_the_moment">There’s no major health concern at the moment.</string>
    <string name="you_can_now_proceed_to_the_home_page_and_continue_exploring_our_features_for_a_healthier_you">You can now proceed to the Home Page and continue exploring our features for a healthier you!</string>
    <string name="for_any_future_concerns_we_re_always_here_to_help_stay_well">For any future concerns, we’re always here to help. Stay well!</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="based_on_our_analysis_it_seems_you_may_be_going_through_a_slight_health_concern_related_to_a_minor_disease">Based on our analysis, it seems you may be going through a slight health concern related to a minor disease.</string>
    <string name="our_doctors_will_review_your_information_and_provide_a_prescription_you_ll_be_notified_when_it_s_ready_to_download">Our doctors will review your information and provide a prescription. You’ll be notified when it\'s ready to download.</string>
    <string name="lorem_1">1. How long are you suffering from this disease?</string>
    <string name="answer">Answer</string>
    <string name="symptom_upload_consultations">Symptom Upload Consultations</string>
    <string name="_2_lorem_ipsum_dolor_sit_amet_consectetur">2. Any other problem which you would like to share related to your problem?</string>
    <string name="_3_lorem_ipsum_dolor_sit_amet_consectetur">3. Do you have any history of this disease?</string>
    <string name="_4_lorem_ipsum_dolor_sit_amet_consectetur">4. Are you taking any medicines? If yes, please share the name of medicine and since how long you are taking this medicine?</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="pdf">PDF</string>
    <string name="media_upload">Media Upload</string>
    <string name="our_doctors_will_review_your_information_and_provide_a_prescription">
    Our doctors will review your information and provide a prescription.
</string>
    <string name="hindi_content">Choose your language</string>
    <string name="hindi_c">Hindi</string>
    <string name="add_your_documents_here">Add your documents here</string>
    <string name="save">Save</string>
    <string name="your_response_has_been_submitted">Your response has been submitted.</string>
    <string name="our_doctors_will_review_your_information_and_n_provide_a_prescription">Our doctors will review your information and provide a prescription.</string>
    <string name="you_ll_be_notified_when_it_s_ready_to_download">You’ll be notified when it\'s ready to download.</string>
    <string name="okay">Okay</string>
    <string name="scheduled_call_consultations">Scheduled Call Consultations</string>
    <string name="book_now">Book Now</string>
    <string name="_09_00_am">09.00 AM</string>
    <string name="summary">Summary</string>
    <string name="we_will_assign_you_a_top_doctor_from_below">We will assign you a top doctor from below</string>
    <string name="free">Free</string>
    <string name="video_consultation_instant_nprescription"><![CDATA[Video consultation & Instant\nPrescription]]></string>
    <string name="data_and_privacy">Data and Privacy</string>
    <string name="content1">The contents for your consultations are private and confidential. Our team may carry out routine\n  anonymised audits to improve service quality.</string>
    <string name="by_proceeding_to_avail_a_consultation_you_agree_to">By proceeding to avail a consultation, you agree to</string>
    <string name="experience_2yrs">Experience: 2yrs</string>
    <string name="doctor_s_name">Doctor’s name</string>
    <string name="apply_promo_code">Apply Promo Code</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="coupon_applied">Coupon applied</string>
    <string name="congratulations">Congratulations</string>
    <string name="first_consultation_free">First Consultation Free!</string>
    <string name="no_payment_required_for_this_session">No payment required for this session.</string>
    <string name="_449_free">₹449|Free</string>
    <string name="enjoy_your_first_consultation">Enjoy your first consultation.</string>
    <string name="thank_you">Thank you!</string>
    <string name="payment_method">Payment Method</string>
    <string name="choose_your_payment_method">Choose your payment method</string>
    <string name="pay">Pay</string>
    <string name="your_appointment_is_confirmed_for_may_n_14_2024_at_10_00_am">Your appointment is confirmed for May\n 14, 2024 at 10:00 AM.</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="your_doctors">Our Doctors</string>
    <string name="resources">Resources</string>
    <string name="notifications">Notifications</string>
    <string name="schedule_your_call">Schedule Your Call</string>
    <string name="upload_symptoms">Upload Symptoms</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="see_all">See all</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="thu_may_14">Thu May 14</string>
    <string name="_10_00_10_15_am">10:00 – 10:15 AM</string>
    <string name="cancel">Cancel</string>
    <string name="reschedule">Reschedule</string>
    <string name="connect_with_the_right_doctor_n_for_your_health_needs">Connect with the right doctor\nfor your health needs.</string>
    <string name="heart">Heart</string>
    <string name="fast_free_reliable_medical_support"><![CDATA[Fast & Reliable Medical Support]]></string>
    <string name="browse_videos">Browse Videos</string>
    <string name="begin_your_health_journey">Begin Your Health\nJourney with a\n &lt;b&gt;Free Consultation!&lt;/b&gt;</string>
    <string name="schedule_a_call">Schedule a Call</string>
    <string name="thumnail">thumnail</string>
    <string name="lorem_ipsum_dolor_sit_namet_consectetur_n_adipiscing_elit">Lorem ipsum dolor sit \namet, consectetur\n adipiscing elit,</string>
    <string name="profile">Profile</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="no_upcoming_appointments">No upcoming appointments?</string>
    <string name="let_s_get_you_connected_with_a_doctor_today">Let’s get you connected with a doctor today!</string>
    <string name="fast_easy_online_consultation"><![CDATA[Fast & Easy Online Consultation]]></string>
    <string name="the_disease_you_selected_seems_to_fall_under_the_minor_category">The disease you selected seems to fall under the Minor category.</string>
    <string name="you_can_proceed_with_a_symptom_upload_consultation_for_a_quick_review_by_a_doctor">You can proceed with a symptom upload consultation for a quick review by a doctor.</string>
    <string name="please_answer_a_few_additional_questions_and_you_may_also_upload_relevant_files_images_videos_pdfs">Please answer a few additional questions and you may also upload relevant files (images, videos, PDFs).</string>
    <string name="proceed">Proceed</string>
    <string name="our_doctors_will_review_your_information_and_n_provide_a_prescription_you_ll_be_notified_when_it_s_n_ready_to_download">Our doctors will review your information and provide a prescription. You’ll be notified when it\'s\n ready to download.</string>
    <string name="get_started">Get Started</string>
    <string name="you_agree_to_our">you agree to our</string>
    <string name="_5_ft_6_in">5 ft 6 in</string>
</resources>