<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/parent_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.basicdetailscreen.WelcomeMessage">

    <!-- Title Text -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/chat_with_us"
        android:textColor="@color/darkGreyColor"
        android:layout_centerInParent="true"
        android:textSize="@dimen/_20ssp"
        android:layout_alignParentTop="true" />

    <!-- Divider -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_below="@id/textView7"
        android:background="@color/greyColor" />
    <!-- FrameLayout for the card content -->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:background="@drawable/frame_bg"
        android:layout_centerInParent="true"
        android:layout_below="@id/logo"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="-45dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/welcome_to_your_ai_health_companion"
                android:textColor="#356598"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/health_insights"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:text="@string/text3"
                android:textAlignment="center"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/smart_fast_reliable"
                android:textColor="#356598"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:text="@string/get_started_text"
                    android:textSize="@dimen/_13sdp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/you_agree_to_our"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/privacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:fontFamily="@font/inter"
                        android:gravity="center"
                        android:text="@string/get_started_text_privacy_policy"
                        android:textSize="@dimen/_13sdp" />


                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_15sdp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/lato_regular"
                android:text="@string/get_started"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </FrameLayout>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:src="@drawable/logo_awpl_icc"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_below="@id/view"
        android:layout_centerInParent="true" />
</RelativeLayout>
