<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/parent_bg"
    tools:context=".fragment.basicdetailscreen.BasicInfoScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_20sdp">

        <RelativeLayout
            android:id="@+id/rl_basic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_15sdp"
            >
            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_icon"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginStart="@dimen/_13sdp"
                />
             <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/lato_regular"
        android:text="@string/basic_information"

        android:textAlignment="center"
        android:textColor="@color/darkGreyColor"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_enter_the_below_data_to_help_us_n_know_more_about_you"
        android:textAlignment="center"
        android:textColor="#858484"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_basic" />

    <!-- Single Line for Progress -->


    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="4dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="#DAEFF9"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <View
            android:id="@+id/progressLine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:background="#199FD9" />
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:background="#DAEFF9" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/full_name"
        android:textColor="@color/darkGreyColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#DAEFF9"
        android:hint="@string/name"
        android:padding="@dimen/_10sdp"
        android:inputType="textPersonName"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/darkGreyColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/enter_your_height"
        android:textColor="@color/darkGreyColor"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#DAEFF9"
        android:hint="@string/_5_ft_6_in"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/_10sdp"
        android:textColor="@color/darkGreyColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/enter_your_weight"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/darkGreyColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHeight" />

    <EditText
        android:id="@+id/etweight"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="#DAEFF9"
        android:hint="50"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/darkGreyColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/gender"
        android:textColor="@color/darkGreyColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etweight" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <TextView
            android:id="@+id/txtMale"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#DAEFF9"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/greyColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtFemale"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#DAEFF9"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="@color/greyColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtOthers"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="#DAEFF9"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:text="@string/others"
            android:textColor="@color/greyColor"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/enter_age"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/darkGreyColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:autofillHints=""
        android:background="#DAEFF9"
        android:hint="@string/_20"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/darkGreyColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/lato_regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>