<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/_15sdp"
    android:background="@drawable/parent_bg"
    tools:context=".fragment.home.OnlineConsultationFragment">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/fast_easy_online_consultation"
        android:textColor="@color/darkGreyColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/the_disease_you_selected_seems_to_fall_under_the_minor_category"
        android:textColor="#356598"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/you_can_proceed_with_a_symptom_upload_consultation_for_a_quick_review_by_a_doctor"
        android:textColor="@color/greyColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center"
        android:text="@string/please_answer_a_few_additional_questions_and_you_may_also_upload_relevant_files_images_videos_pdfs"
        android:textColor="@color/greyColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView55" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/our_doctors_will_review_your_information_and_n_provide_a_prescription_you_ll_be_notified_when_it_s_n_ready_to_download"
        android:textColor="@color/greyColor"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView56" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/dialog_no_btn_bg"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/darkGreyColor"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/proceedBtn"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/lato_regular"
        android:text="@string/proceed"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />





</androidx.constraintlayout.widget.ConstraintLayout>